--- a/app/views/shared/_term_of_service_modal.html.slim
+++ b/app/views/shared/_term_of_service_modal.html.slim
@@ -1,19 +1,20 @@
 dialog#term_of_service_modal.modal
   form.modal-backdrop method="dialog"
     button
-  .modal-box.w-2/3.max-w-3xl.h-4/5.overflow-hidden.pr-3.pl-10.pt-10.pb-10
-    .w-full.h-full.overflow-y-auto
+  div class="modal-box w-4/5 md:w-2/3 max-w-3xl h-4/5 overflow-hidden\
+            pr-5 md:pr-10 pl-8 md:pl-16 py-12 md:py-16"
+    .w-full.h-full.overflow-y-auto.pr-4
       form method="dialog"
         = button_tag '',
-          class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
+          class: 'btn btn-sm btn-circle btn-ghost absolute right-4 top-4'
           = image_tag 'delete-icon.png', size: '15x15', alt: 'モーダルを閉じる'
       .leading-7.text-base
-        h2.font-bold.text-xl
+        h2.font-bold.text-lg.md:text-xl
           | 利用規約
         p.mt-2
           | この利用規約（以下、「本規約」といいます。）は、このウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の
             利用条件を定めるものです。登録ユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第1条（適用）
         ol
           li
@@ -23,7 +24,7 @@ dialog#term_of_service_modal.modal
               これら個別規定はその名称のいかんに関わらず、本規約の一部を構成するものとします。
           li
             | 本規約の規定が前条の個別規定の規定と矛盾する場合には、個別規定において特段の定めなき限り、個別規定の規定が優先されるものとします。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第2条（禁止事項）
         p
           | ユーザーは、本サービスの利用にあたり、以下の行為をしてはなりません。
@@ -54,7 +55,7 @@ dialog#term_of_service_modal.modal
             | 本サービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為
           li
             | その他、本サービスが不適切と判断する行為
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第3条（本サービスの提供の停止等）
         ol.list-decimal.pl-4
           li
@@ -72,7 +73,7 @@ dialog#term_of_service_modal.modal
           li
             | 本サービスは、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、
               一切の責任を負わないものとします。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第4条（保証の否認および免責事項）
         ol.list-decimal.pl-4
           li
@@ -84,28 +85,28 @@ dialog#term_of_service_modal.modal
           li
             | 本サービスは、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について
               一切責任を負いません。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第5条（サービス内容の変更等）
         p
           | 本サービスは、ユーザーへの事前の告知をもって、本サービスの内容を変更、追加または廃止することがあり、
             ユーザーはこれを承諾するものとします。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第6条（利用規約の変更）
         ol.list-decimal.pl-4
           li
             | 本サービスは、本サービスが必要と判断した場合には、ユーザーへ通知することなく、本規約を変更することができるものとします。
           li
             | ユーザーが本規約の変更後に、本サービスの利用を開始した場合には、変更後の規約に同意したものとみなします。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第7条（個人情報の取扱い）
         p
           | 本サービスは、本サービスの利用によって取得する個人情報については、「プライバシーポリシー」に従い適切に取り扱うものとします。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第8条（権利義務の譲渡の禁止）
         p
           | ユーザーは、本サービスの書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、
             または担保に供することはできません。
-        h3.font-bold.text-lg.my-2
+        h3.font-bold.text-md.md:text-lg.my-2
           | 第9条（準拠法・裁判管轄）
         ol.list-decimal.pl-4
           li
