ボタンの配置をスマホに対応するよう修正

--- a/app/views/roulettes/_no_items.html.slim
+++ b/app/views/roulettes/_no_items.html.slim
@@ -1,5 +1,5 @@
-div class="min-w-[600px] flex items-center"
-  .alert.alert-error.mx-auto.shadow.w-4/5
+div class="min-w-80 lg:w-[600px] flex items-center"
+  .alert.alert-error.mx-auto.shadow.lg:w-4/5
     .flex
       = image_tag 'error.svg', size: '20x20', class: 'mr-3'
       p
