トップページが表示されないバグ修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,7 +7,7 @@
       | トークテーマと話す人を決めるルーレットを作成できます。
     p
       | ルーレットは自動的に保存されるので事前にトークテーマを考えておくことができます。
-  = image_tag 'roulette-image',
+  = image_tag 'roulette-image.png',
     class: 'mt-5 md:mt-10 shadow-md rounded-lg',
     alt: '作成ルーレットのイメージ'
   = link_to 'ルーレットを作る',
