話す人の追加・更新・削除処理をTurbo Streamsに変更

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -61,4 +61,5 @@
       .mt-10.lg:h-80
         h2.font-bold.text-lg.mb-2
           | 話す人
-        = render partial: 'speakers/index', locals: { speakers: @speakers }
+        = render partial: 'speakers/index',
+          locals: { roulette: @roulette, speakers: @speakers }
