--- a/app/views/speakers/create.turbo_stream.slim
+++ b/app/views/speakers/create.turbo_stream.slim
@@ -1,5 +1,7 @@
 = turbo_stream.update 'speakers_list' do
-  = render partial: 'speakers/index', locals: { roulette: @roulette, speakers: @speakers }
+  = render partial: 'speakers/index',
+    locals: { roulette: @roulette, speakers: @speakers }
 
 = turbo_stream.replace 'roulette' do
-  = render partial: 'roulettes/roulette', locals: { talk_themes: @talk_themes, speakers: @speakers }
+  = render partial: 'roulettes/roulette',
+    locals: { talk_themes: @talk_themes, speakers: @speakers }
