--- a/app/views/talk_themes/destroy.turbo_stream.slim
+++ b/app/views/talk_themes/destroy.turbo_stream.slim
@@ -1,5 +1,7 @@
 = turbo_stream.update 'talk_themes_list' do
-  = render partial: 'talk_themes/index', locals: { roulette: @roulette, talk_themes: @talk_themes }
+  = render partial: 'talk_themes/index',
+    locals: { roulette: @roulette, talk_themes: @talk_themes }
 
 = turbo_stream.replace 'roulette' do
-  = render partial: 'roulettes/roulette', locals: { talk_themes: @talk_themes, speakers: @speakers }
+  = render partial: 'roulettes/roulette',
+    locals: { talk_themes: @talk_themes, speakers: @speakers }
