--- a/app/views/talk_themes/new.html.slim
+++ b/app/views/talk_themes/new.html.slim
@@ -1,8 +1,6 @@
 = turbo_frame_tag 'new_talk_theme'
   .mt-3
-    = form_with model: [@roulette, @talk_theme],
-      class: 'w-full flex' do |f|
-      = f.text_field :theme,
-        class: 'input input-bordered input-sm w-4/5',
-        placeholder: '最近買ってよかったもの'
-      = f.submit '登録', class: 'btn btn-outline btn-sm btn-primary ml-auto'
+    = render partial: 'form',
+      locals: { roulette: @roulette,
+                talk_theme: @talk_theme,
+                button_label: '登録' }
