--- a/app/views/speakers/edit.html.slim
+++ b/app/views/speakers/edit.html.slim
@@ -1,6 +1,6 @@
 = turbo_frame_tag @speaker
   .flex.items-center.h-full
-    = form_with model: [@roulette, @speaker],
-      class: 'w-full flex' do |f|
-      = f.text_field :name, class: 'input input-bordered input-sm w-4/5'
-      = f.submit '更新', class: 'btn btn-outline btn-sm btn-primary ml-2'
+    = render partial: 'form',
+      locals: { roulette: @roulette,
+                speaker: @speaker,
+                button_label: '更新' }
