--- a/app/views/talk_themes/edit.html.slim
+++ b/app/views/talk_themes/edit.html.slim
@@ -1,6 +1,6 @@
 = turbo_frame_tag @talk_theme
   .flex.items-center.h-full
-    = form_with model: [@roulette, @talk_theme],
-      class: 'w-full flex' do |f|
-      = f.text_field :theme, class: 'input input-bordered input-sm w-4/5'
-      = f.submit '更新', class: 'btn btn-outline btn-sm btn-primary ml-2'
+    = render partial: 'form',
+      locals: { roulette: @roulette,
+                talk_theme: @talk_theme,
+                button_label: '更新' }
