トークテーマや話す人が抽選済みだったら背景色を変更
ルーレットの結果、選択済みのトークテーマと話す人の背景を灰色に変更するよう修正。
最後の一回は背景色を元に戻すようにした。

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -20,7 +20,9 @@
     - if @talk_themes.count.zero? || @speakers.count.zero?
       = render partial: 'roulettes/no_items'
     - else
-      .relative.pt-24.md:pt-32 data-controller="rotate"
+      .relative.pt-24.md:pt-32[
+        data-controller="rotate"
+        data-rotate-roulette-items-outlet='.roulette-items']
         div[
           class="absolute top-0 left-4 lg:left-6 z-10 rounded-xl shadow-lg\
                  bg-primary-content/[.85] p-3 md:p-6 w-11/12 invisible"
@@ -50,6 +52,7 @@
               data-rotate-target="resetButton"
               data-controller="candidate"
               data-candidate-roulette-outlet="#roulette"
+              data-candidate-roulette-items-outlet='.roulette-items'
               data-action="click->candidate#reset"]
               | リセット
     .mx-auto.lg:w-96.lg:ml-24.px-6.lg:px-0
