--- a/app/views/roulettes/_roulette.html.slim
+++ b/app/views/roulettes/_roulette.html.slim
@@ -1,5 +1,6 @@
 = turbo_frame_tag 'roulette',
-  'data-controller': 'roulette'
+  'data-controller': 'roulette',
+  'data-roulette-roulette-items-outlet': '.roulette-items'
   div class="flex-initial w-[350px] md:w-[500px] lg:w-[600px]\
             h-[350px] md:h-[500px] lg:h-[600px]"
     div class="text-center relative w-[350px] md:w-[500px] lg:w-[600px]"
