--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,9 +1,12 @@
 = turbo_frame_tag 'talk_themes_list'
   .rounded.border.border-gray-400.overflow-hidden
-    ul.w-full.max-h-60.overflow-y-auto
+    ul.w-full.max-h-60.overflow-y-auto.roulette-items[
+      data-controller="roulette-items"
+      data-roulette-items-key-value="talk"]
       - talk_themes.each do |talk_theme|
-        li class="border-b last:border-b-0 border-gray-400 w-full group\
-                  pl-4 pr-2 py-2 hover:bg-base-200"
+        li[class="border-b last:border-b-0 border-gray-400 w-full group\
+                  pl-4 pr-2 py-2 hover:bg-base-200" 
+          data-roulette-items-target="item"]
           = turbo_frame_tag talk_theme do
             .flex.items-center.h-full
               p.hidden
