--- a/app/views/talk_themes/create.turbo_stream.slim
+++ b/app/views/talk_themes/create.turbo_stream.slim
@@ -1,4 +1,4 @@
-= turbo_stream.update 'talk_themes_list' do
+= turbo_stream.replace 'talk_themes_list' do
   = render partial: 'talk_themes/index',
     locals: { roulette: @roulette, talk_themes: @talk_themes }
 
