0件時と1件時の表示部分をそれぞれパーシャル化
トークテーマまたは話す人が0件になった時と、両方1件以上の時の表示部を
それぞれパーシャル化した。

--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,24 +1,7 @@
 = turbo_frame_tag 'talk_themes_list'
-  .rounded.border.border-gray-400.overflow-hidden
-    ul.w-full.max-h-60.overflow-y-auto
-      - talk_themes.each do |talk_theme|
-        li class="border-b last:border-b-0 border-gray-400 w-full group\
-                  pl-4 pr-2 py-2 hover:bg-base-200"
-          = turbo_frame_tag talk_theme do
-            .flex.items-center.h-full
-              p.hidden
-                = talk_theme.id
-              .flex-1.text-wrap
-                = link_to talk_theme.theme,
-                  edit_roulette_talk_theme_path(roulette, talk_theme),
-                  class: 'w-full block'
-              .ml-2.opacity-0.group-hover:opacity-80
-                = link_to image_tag('delete-icon.png',
-                  size: '10x10',
-                  alt: 'トークテーマを削除'),
-                  roulette_talk_theme_path(roulette, talk_theme),
-                  data: { turbo_method: :delete },
-                  class: 'btn btn-xs btn-circle btn-ghost'
+  - unless talk_themes.count.zero?
+    = render partial: 'talk_themes/talk_themes',
+      locals: { talk_themes:, roulette: }
   = turbo_frame_tag 'new_talk_theme' do
     .mt-3.px-1 data-testid="new-talk-theme-link"
       - if talk_themes.count < 10
