--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -1,25 +1,7 @@
 = turbo_frame_tag 'speakers_list'
   - unless speakers.count.zero?
-    .rounded.border.border-gray-400.overflow-hidden
-      ul.w-full.max-h-60.overflow-y-auto
-        - speakers.each do |speaker|
-          li class="border-b last:border-b-0 border-gray-400 w-full group\
-                    pl-4 pr-2 py-2 hover:bg-base-200"
-            = turbo_frame_tag speaker do
-              .flex.items-center.h-full
-                p.hidden
-                  = speaker.id
-                .flex-1.text-wrap
-                  = link_to speaker.name,
-                    edit_roulette_speaker_path(roulette, speaker),
-                    class: 'w-full block'
-                .ml-2.opacity-0.group-hover:opacity-80
-                  = link_to image_tag('delete-icon.png',
-                    size: '10x10',
-                    alt: '話す人を削除'),
-                    roulette_speaker_path(roulette, speaker),
-                    data: { turbo_method: :delete },
-                    class: 'btn btn-xs btn-circle btn-ghost'
+    = render partial: 'speakers/speakers',
+      locals: { speakers:, roulette: }
   = turbo_frame_tag 'new_speaker' do
     .mt-3.px-1 data-testid="new-speaker-link"
       - if speakers.count < 10
