トークテーマと話す人が0件の時と1件の時の処理を変更

--- a/app/views/roulettes/_no_items.html.slim
+++ b/app/views/roulettes/_no_items.html.slim
@@ -1,7 +1,8 @@
-= turbo_frame_tag 'no_items_roulette',
-  class: 'min-w-80 lg:w-[600px] flex items-center'
-  .alert.alert-error.mx-auto.shadow.lg:w-4/5
-    .flex
-      = image_tag 'error.svg', size: '20x20', class: 'mr-3'
-      p
-        | トークテーマと話す人を1件以上登録してください。
+= turbo_frame_tag 'no_items_roulette'
+  div class="flex items-center w-[350px] md:w-[500px] \
+            lg:w-[600px] h-[350px] md:h-[500px] lg:h-[700px]"
+    div class="alert alert-error mx-auto shadow w-[300px] md:w-[450px] lg:w-[500px]"
+      .flex
+        = image_tag 'error.svg', size: '20x20', class: 'mr-3'
+        p.text-left
+          | トークテーマと話す人を1件以上登録してください。
