--- a/app/views/speakers/create.turbo_stream.slim
+++ b/app/views/speakers/create.turbo_stream.slim
@@ -1,7 +1,16 @@
-= turbo_stream.update 'speakers_list' do
+= turbo_stream.replace 'speakers_list' do
   = render partial: 'speakers/index',
     locals: { roulette: @roulette, speakers: @speakers }
 
-= turbo_stream.replace 'roulette' do
-  = render partial: 'roulettes/roulette',
-    locals: { talk_themes: @talk_themes, speakers: @speakers }
+- if @speakers.count == 1 && !@talk_themes.count.zero?
+  = turbo_stream.remove 'no_items_roulette'
+  = turbo_stream.prepend 'roulette_area' do
+    = render partial: 'roulettes/roulettes_and_buttons',
+      locals: { roulette: @roulette,
+                talk_themes: @talk_themes,
+                speakers: @speakers }
+
+- elsif !@talk_themes.count.zero?
+  = turbo_stream.replace 'roulette' do
+    = render partial: 'roulettes/roulette',
+      locals: { talk_themes: @talk_themes, speakers: @speakers }
