--- a/app/views/roulettes/_no_items.html.slim
+++ b/app/views/roulettes/_no_items.html.slim
@@ -1,7 +1,8 @@
 = turbo_frame_tag 'no_items_roulette'
   div class="flex items-center w-[350px] md:w-[500px] \
             lg:w-[600px] h-[350px] md:h-[500px] lg:h-[700px]"
-    div class="alert alert-error mx-auto shadow w-[300px] md:w-[450px] lg:w-[500px]"
+    div class="alert alert-error mx-auto shadow\
+              w-[300px] md:w-[450px] lg:w-[500px]"
       .flex
         = image_tag 'error.svg', size: '20x20', class: 'mr-3'
         p.text-left
