--- a/app/views/talk_themes/destroy.turbo_stream.slim
+++ b/app/views/talk_themes/destroy.turbo_stream.slim
@@ -1,16 +1,17 @@
 - if @talk_themes.count.zero?
   = turbo_stream.remove 'talk_themes'
+
+  - unless @speakers.count.zero?
+    = turbo_stream.remove 'roulettes_and_buttons'
+    = turbo_stream.prepend 'roulette_area' do
+      = render partial: 'roulettes/no_items'
+
 - else
   = turbo_stream.replace 'talk_themes_list' do
     = render partial: 'talk_themes/index',
       locals: { roulette: @roulette, talk_themes: @talk_themes }
 
-- if @talk_themes.count.zero? && !@speakers.count.zero?
-  = turbo_stream.remove 'roulettes_and_buttons'
-  = turbo_stream.prepend 'roulette_area' do
-    = render partial: 'roulettes/no_items'
-
-- if !@talk_themes.count.zero? && !@speakers.count.zero?
-  = turbo_stream.replace 'roulette' do
-    = render partial: 'roulettes/roulette',
-      locals: { talk_themes: @talk_themes, speakers: @speakers }
+  - unless @speakers.count.zero?
+    = turbo_stream.replace 'roulette' do
+      = render partial: 'roulettes/roulette',
+        locals: { talk_themes: @talk_themes, speakers: @speakers }
