ルーレットで選択されたら一覧の背景色を変更する

--- a/app/views/speakers/_speakers.html.slim
+++ b/app/views/speakers/_speakers.html.slim
@@ -1,9 +1,12 @@
 = turbo_frame_tag 'speakers'
   .rounded.border.border-gray-400.overflow-hidden
-    ul.w-full.max-h-60.overflow-y-auto
+    ul.w-full.max-h-60.overflow-y-auto.roulette-items[
+      data-controller="roulette-items"
+      data-roulette-items-key-value="speaker"]
       - speakers.each do |speaker|
-        li class="border-b last:border-b-0 border-gray-400 w-full group\
+        li[class="border-b last:border-b-0 border-gray-400 w-full group\
                   pl-4 pr-2 py-2 hover:bg-base-200"
+          data-roulette-items-target="item"]
           = turbo_frame_tag speaker do
             .flex.items-center.h-full
               p.hidden
