--- a/app/views/roulettes/_roulettes_and_buttons.html.slim
+++ b/app/views/roulettes/_roulettes_and_buttons.html.slim
@@ -1,5 +1,7 @@
 = turbo_frame_tag 'roulettes_and_buttons'
-  .relative.pt-24.md:pt-32 data-controller="rotate"
+  .relative.pt-24.md:pt-32[
+    data-controller="rotate"
+    data-rotate-roulette-items-outlet='.roulette-items']
     div[
       class="absolute top-0 left-4 lg:left-6 z-10 rounded-xl shadow-lg\
              bg-primary-content/[.85] p-3 md:p-6 w-11/12 invisible"
@@ -29,5 +31,6 @@
           data-rotate-target="resetButton"
           data-controller="candidate"
           data-candidate-roulette-outlet="#roulette"
+          data-candidate-roulette-items-outlet='.roulette-items'
           data-action="click->candidate#reset"]
           | リセット
