--- a/app/views/speakers/_speakers.html.slim
+++ b/app/views/speakers/_speakers.html.slim
@@ -12,9 +12,14 @@
               p.hidden
                 = speaker.id
               .flex-1.text-wrap
-                = link_to speaker.name,
-                  edit_roulette_speaker_path(roulette, speaker),
-                  class: 'w-full block'
+                = link_to edit_roulette_speaker_path(roulette, speaker),
+                  class: 'w-full block' do
+                  .flex
+                    p class="hidden text-xs bg-neutral-content py-1 px-2\
+                            rounded-md mr-2 group-hover:block"
+                      | 編集
+                    p
+                      = speaker.name
               .ml-2.opacity-0.group-hover:opacity-80
                 = link_to image_tag('delete-icon.png',
                   size: '10x10',
