--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -5,15 +5,17 @@
     div class="w-fit" data-controller="clipboard"
       div data-clipboard-target="toolTip" data-tip="コピーしました！"
         = button_tag 'data-action' => 'clipboard#copy',
-          class: 'w-40 btn bg-neutral-content flex items-center justify-start'
-          = image_tag 'copy-link-icon.png', size: '17x16'
-          p.leading-4.tracking-wider.mx-auto
+          class: 'w-40 btn bg-neutral-content flex items-center\
+                  justify-start px-3'
+          = image_tag 'copy-link-icon.png', size: '16x16'
+          p.leading-4.tracking-wider.ml-2
             | リンクのコピー
     .lg:ml-2.mt-1.lg:mt-0.w-fit
       = button_tag onclick: 'help_modal.showModal()',
-        class: 'w-40 btn bg-neutral-content flex items-center justify-start'
+        class: 'w-40 btn bg-neutral-content flex items-center\
+                justify-start px-3'
         = image_tag 'help-icon.png', size: '16x16'
-        p.leading-4.tracking-wider.mx-auto
+        p.leading-4.tracking-wider.ml-6
           | 使い方
       = render partial: 'roulettes/help_modal'
   .lg:flex.mt-8.lg:mt-0
