追加リンクホバー時に下線を表示するよう修正

--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -7,7 +7,7 @@
       - if talk_themes.count < 10
         = link_to '＋ トークテーマを追加する',
           new_roulette_talk_theme_path(roulette),
-          class: 'text-neutral'
+          class: 'text-neutral hover:underline'
       - else
         p.text-neutral
           | トークテーマは10個以上追加できません
