--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -7,7 +7,7 @@
       - if speakers.count < 10
         = link_to '＋ 話す人を追加する',
           new_roulette_speaker_path(roulette),
-          class: 'text-neutral'
+          class: 'text-neutral hover:underline'
       - else
         p.text-neutral
           | 話す人は10人以上追加できません
