URLコピーボタンと使い方ボタンの配置、デザインを変更
URLコピーボタンと使い方ボタンは特に関連性がないため、
使い方ボタンをヘッダーに配置するよう変更した。

--- a/app/views/roulettes/_help_modal.html.slim
+++ b/app/views/roulettes/_help_modal.html.slim
@@ -44,5 +44,5 @@ dialog#help_modal.modal
           | 作成済みのルーレットを表示する
         p.mt-2.leading-7
           | 作成したルーレットのURLにアクセスすることで、入力済みのルーレットを表示できます。<br>
-            当ページをブックマークしていただくか、画面上部の「リンクのコピー」ボタンをクリックしてURLを保管してください。<br>
+            当ページをブックマークしていただくか、画面上部の「コピー」ボタンをクリックしてURLを保管してください。<br>
             ※URLを忘れた場合、作成済みのルーレットにアクセスできなくなりますのでご注意ください。
