--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,5 +1,13 @@
 header class="min-w-80 shadow"
-  .flex.max-w-lg.lg:max-w-screen-lg.mx-auto.items-center.py-2.pl-3
+  div class="flex justify-between max-w-lg lg:max-w-screen-lg\
+            mx-auto items-center py-2 pl-3 pr-3 lg:pr-2"
     = link_to image_tag('logo-header.png', size: '200x40', alt: 'RouletteTalk'),
       root_path,
       class: 'text-primary font-bold text-2xl'
+    = button_tag onclick: 'help_modal.showModal()',
+      class: 'w-32 btn bg-neutral-content flex items-center\
+              justify-start px-3'
+      = image_tag 'help-icon.png', size: '16x16'
+      p.leading-4.tracking-wider.ml-3
+        | 使い方
+    = render partial: 'roulettes/help_modal'
