トークテーマ設定済みルーレットの配布機能を追加

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -21,6 +21,11 @@
           = button_tag 'コピー', 'data-action' => 'clipboard#copy',
             class: 'w-20 font-semibold text-sm tracking-widest\
                     bg-neutral-content hover:bg-base-300 duration-200'
+      div
+        = button_tag onclick: 'template_modal.showModal()'
+          p
+            | このルーレットを配布する
+        = render partial: 'roulettes/template_modal', locals: { roulette: @roulette }
       .mt-8.lg:mt-20.lg:h-80
         h2.font-bold.text-lg.mb-2
           | トークテーマ
