--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -9,15 +9,4 @@ header class="min-w-80 shadow"
         = button_tag '使い方',
           onclick: 'help_modal.showModal()'
     = render partial: 'roulettes/help_modal'
-    - if flash[:notice]
-      .absolute.top-4.right-2.w-72.shadow-xl.alert.alert-success.z-10.opacity-90.pointer-events-none[
-          data-controller="toast"
-        ]
-        p
-          = notice
-    - if flash[:alert]
-      .absolute.top-4.right-2.w-72.shadow-xl.alert.alert-error.z-10.opacity-90.pointer-events-none[
-          data-controller="toast"
-        ]
-        p
-          = alert
+    = render partial: 'shared/toast'
