linterの指摘事項を修正

--- a/app/views/roulettes/_help_modal.html.slim
+++ b/app/views/roulettes/_help_modal.html.slim
@@ -50,5 +50,6 @@ dialog#help_modal.modal
         h2.font-bold.text-lg.md:text-xl.text-primary
           | トークテーマをコピーして新しいルーレットを作成する
         p.mt-2.leading-7
-          | 画面下部の「トークテーマをコピーして新規作成」をクリックすると、現在表示しているルーレットのトークテーマをコピーして新しいルーレットを作成できます。<br>
+          | 画面下部の「トークテーマをコピーして新規作成」をクリックすると、現在表示しているルーレットのトークテーマをコピーして
+            新しいルーレットを作成できます。<br>
             複数テーブルに分かれてのイベントで、主催者が作成したルーレット（トークテーマ）を各テーブルで使いたい場合などにお使いください。<br>
