--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -2,7 +2,9 @@ header class="min-w-80 shadow"
   div class="lg:relative navbar max-w-lg lg:max-w-screen-lg\
             mx-auto items-center py-2 pl-3"
     .flex-1
-      = link_to image_tag('logo-header.png', size: '200x40', alt: 'RouletteTalk'),
+      = link_to image_tag('logo-header.png',
+        size: '200x40',
+        alt: 'RouletteTalk'),
         root_path
     ul.flex-none.menu.menu-horizontal.font-bold.px-0.py-0
       li
