slim-lintの指摘事項修正

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -13,7 +13,7 @@ footer class="footer min-w-80 bg-base-300 mt-auto"
       = link_to 'リリース情報',
         'https://siso255.hatenablog.com/archive/category/RouletteTalk',
         target: :_blank,
-        rel: "noopner noreferrer"
+        rel: 'noopner noreferrer'
     .flex.h-6.mx-auto
       .flex.items-center.h-full.mr-3
         p.text-base
