片方が0件のときの更新時に発生するエラーを修正
トークテーマか話す人のどちらかが0件のときに、もう片方を更新すると
ルーレットが表示できずにテンプレートエラーが発生する。
そのため、上記の場合はルーレットを表示しないように修正。

--- a/app/views/speakers/update.turbo_stream.slim
+++ b/app/views/speakers/update.turbo_stream.slim
@@ -2,6 +2,7 @@
   = render partial: 'speakers/index',
     locals: { roulette: @roulette, speakers: @speakers }
 
-= turbo_stream.replace 'roulette' do
-  = render partial: 'roulettes/roulette',
-    locals: { talk_themes: @talk_themes, speakers: @speakers }
+- if !@talk_themes.count.zero?
+  = turbo_stream.replace 'roulette' do
+    = render partial: 'roulettes/roulette',
+      locals: { talk_themes: @talk_themes, speakers: @speakers }
