--- a/app/views/talk_themes/update.turbo_stream.slim
+++ b/app/views/talk_themes/update.turbo_stream.slim
@@ -2,6 +2,7 @@
   = render partial: 'talk_themes/index',
     locals: { roulette: @roulette, talk_themes: @talk_themes }
 
-= turbo_stream.replace 'roulette' do
-  = render partial: 'roulettes/roulette',
-    locals: { talk_themes: @talk_themes, speakers: @speakers }
+- if !@speakers.count.zero?
+  = turbo_stream.replace 'roulette' do
+    = render partial: 'roulettes/roulette',
+      locals: { talk_themes: @talk_themes, speakers: @speakers }
