--- a/app/views/speakers/_form.html.slim
+++ b/app/views/speakers/_form.html.slim
@@ -1,6 +1,7 @@
 = form_with model: [roulette, speaker],
   class: 'w-full flex' do |f|
   = f.text_field :name,
+    autofocus: true,
     class: 'input input-bordered input-sm w-4/5',
     placeholder: '田中さん'
   = f.submit button_label,
