--- a/app/views/talk_themes/_form.html.slim
+++ b/app/views/talk_themes/_form.html.slim
@@ -1,6 +1,7 @@
 = form_with model: [roulette, talk_theme],
   class: 'w-full flex' do |f|
   = f.text_field :theme,
+    autofocus: true,
     class: 'input input-bordered input-sm w-4/5',
     placeholder: '最近買ってよかったもの'
   = f.submit button_label,
