使い方モーダルとトースト通知のパーシャルをViewComponentに変更

--- a/app/components/header_component.html.slim
+++ b/app/components/header_component.html.slim
@@ -10,5 +10,5 @@ header class="min-w-80 shadow"
       li
         = button_tag '使い方',
           onclick: 'help_modal.showModal()'
-    = render partial: 'roulettes/help_modal'
-    = render partial: 'shared/toast'
+    = render(HelpModalComponent.new)
+    = render(ToastComponent.new(flash: @flash))
