--- a/app/components/toast_component.html.slim
+++ b/app/components/toast_component.html.slim
@@ -1,12 +1,12 @@
-- if notice
+- if @flash.notice
   div[class='absolute top-4 right-2 w-72 shadow-xl alert alert-success\
             z-10 opacity-90 pointer-events-none'
       data-controller="toast"]
     p
-      = notice
-- if alert
+      = @flash.notice
+- if @flash.alert
   div[class='absolute top-4 right-2 w-72 shadow-xl alert alert-error\
             z-10 opacity-90 pointer-events-none'
       data-controller="toast"]
     p
-      = alert
+      = @flash.alert
