--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
       defer: true
 
   body.min-h-screen.flex.flex-col
-    = render(HeaderComponent.new)
+    = render(HeaderComponent.new(flash: flash))
     main.w-full
       = yield
     = render partial: 'shared/footer'
