--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
       defer: true
 
   body.min-h-screen.flex.flex-col
-    = render(HeaderComponent.new(flash: flash))
+    = render(Header::Component.new(flash: flash))
     main.w-full
       = yield
-    = render(FooterComponent.new)
+    = render(Footer::Component.new)
