--- a/app/views/speakers/destroy.turbo_stream.slim
+++ b/app/views/speakers/destroy.turbo_stream.slim
@@ -4,7 +4,7 @@
   - unless @talk_themes.count.zero?
     = turbo_stream.remove 'roulettes_and_buttons'
     = turbo_stream.prepend 'roulette_area' do
-      = render partial: 'roulettes/no_items'
+      = render(Roulettes::NoItems::Component.new)
 
 - else
   = turbo_stream.replace 'speakers_list' do
