--- a/app/views/speakers/update.turbo_stream.slim
+++ b/app/views/speakers/update.turbo_stream.slim
@@ -4,5 +4,6 @@
 
 - if !@talk_themes.count.zero?
   = turbo_stream.replace 'roulette' do
-    = render partial: 'roulettes/roulette',
-      locals: { talk_themes: @talk_themes, speakers: @speakers }
+    = render(Roulettes::Roulette::Component.new(\
+      talk_themes: @talk_themes,
+      speakers: @speakers))
