--- a/app/views/talk_themes/destroy.turbo_stream.slim
+++ b/app/views/talk_themes/destroy.turbo_stream.slim
@@ -13,5 +13,5 @@
 
   - unless @speakers.count.zero?
     = turbo_stream.replace 'roulette' do
-      = render partial: 'roulettes/roulette',
-        locals: { talk_themes: @talk_themes, speakers: @speakers }
+      = render(Roulettes::Roulette::Component.new(\
+        talk_themes: @talk_themes, speakers: @speakers))
