--- a/app/views/talk_themes/create.turbo_stream.slim
+++ b/app/views/talk_themes/create.turbo_stream.slim
@@ -1,6 +1,6 @@
 = turbo_stream.replace 'talk_themes_list' do
-  = render partial: 'talk_themes/index',
-    locals: { roulette: @roulette, talk_themes: @talk_themes }
+  = render(TalkTheme::Index::Component.new(\
+    roulette: @roulette, talk_themes: @talk_themes))
 
 - if @talk_themes.count == 1 && !@speakers.count.zero?
   = turbo_stream.remove 'no_items_roulette'
