--- a/app/views/talk_themes/destroy.turbo_stream.slim
+++ b/app/views/talk_themes/destroy.turbo_stream.slim
@@ -8,8 +8,8 @@
 
 - else
   = turbo_stream.replace 'talk_themes_list' do
-    = render partial: 'talk_themes/index',
-      locals: { roulette: @roulette, talk_themes: @talk_themes }
+    = render(TalkTheme::Index::Component.new(\
+      roulette: @roulette, talk_themes: @talk_themes))
 
   - unless @speakers.count.zero?
     = turbo_stream.replace 'roulette' do
