--- a/app/views/talk_themes/update.turbo_stream.slim
+++ b/app/views/talk_themes/update.turbo_stream.slim
@@ -1,6 +1,6 @@
 = turbo_stream.update 'talk_themes_list' do
-  = render partial: 'talk_themes/index',
-    locals: { roulette: @roulette, talk_themes: @talk_themes }
+  = render(TalkTheme::Index::Component.new(\
+    roulette: @roulette, talk_themes: @talk_themes))
 
 - if !@speakers.count.zero?
   = turbo_stream.replace 'roulette' do
