--- a/app/components/talk_theme/form/component.html.slim
+++ b/app/components/talk_theme/form/component.html.slim
@@ -1,7 +1,7 @@
-= form_with model: [roulette, talk_theme],
+= form_with model: [@roulette, @talk_theme],
   class: 'w-full flex' do |f|
   = f.text_field :theme,
     class: 'input input-bordered input-sm w-4/5',
     placeholder: '最近買ってよかったもの'
-  = f.submit button_label,
+  = f.submit @button_label,
     class: 'btn btn-outline btn-sm btn-primary ml-auto'
